--- a/rest/package.json
+++ b/rest/package.json
@@ -9,12 +9,17 @@
     },
     "author": "David Martinez",
     "dependencies": {
-        "@fastify/cors": "^9.0.1",
-        "@fastify/swagger": "^8.14.0",
-        "fastify": "^4.26.1"
+        "@fastify/cors": "^8.0.0",
+        "@fastify/jwt": "^5.0.0",
+        "@fastify/swagger": "^7.0.0",
+        "boom": "^7.3.0",
+        "fastify": "^4.26.1",
+        "fastify-cors": "^6.1.0",
+        "fastify-jwt": "^4.2.0",
+        "fastify-plugin": "^4.5.1"
     },
     "devDependencies": {
-      "nodemon": "^3.1.0"
+        "nodemon": "^3.1.0"
     },
     "nodemonConfig": {
         "legacyWatch": true
