--- a/rest/package.json
+++ b/rest/package.json
@@ -18,7 +18,8 @@
         "fastify": "^4.26.1",
         "fastify-cors": "^6.1.0",
         "fastify-jwt": "^4.2.0",
-        "fastify-plugin": "^4.5.1"
+        "fastify-plugin": "^4.5.1",
+        "mysql": "^2.18.1"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
