--- a/rest/package.json
+++ b/rest/package.json
@@ -12,14 +12,21 @@
         "@fastify/autoload": "^5.8.0",
         "@fastify/cors": "^8.0.0",
         "@fastify/jwt": "^5.0.0",
+        "@fastify/multipart": "^8.2.0",
         "@fastify/swagger": "^7.0.0",
+        "@fastify/swagger-ui": "^3.0.0",
         "boom": "^7.3.0",
         "dotenv": "^16.4.5",
         "fastify": "^4.26.1",
         "fastify-cors": "^6.1.0",
         "fastify-jwt": "^4.2.0",
+        "fastify-multipart": "^5.4.0",
         "fastify-plugin": "^4.5.1",
-        "mysql": "^2.18.1"
+        "fs-extra": "^11.2.0",
+        "multiparty": "^4.2.3",
+        "mysql": "^2.18.1",
+        "pump": "^3.0.0",
+        "xlsx": "^0.18.5"
     },
     "devDependencies": {
         "nodemon": "^3.1.0"
