--- a/rest/package.json
+++ b/rest/package.json
@@ -15,6 +15,7 @@
         "@fastify/multipart": "^8.2.0",
         "@fastify/swagger": "^7.0.0",
         "@fastify/swagger-ui": "^3.0.0",
+        "@mapbox/mapbox-sdk": "^0.15.5",
         "boom": "^7.3.0",
         "dotenv": "^16.4.5",
         "fastify": "^4.26.1",
@@ -22,7 +23,6 @@
         "fastify-jwt": "^4.2.0",
         "fastify-multipart": "^5.4.0",
         "fastify-plugin": "^4.5.1",
-        "fs-extra": "^11.2.0",
         "multiparty": "^4.2.3",
         "mysql": "^2.18.1",
         "pump": "^3.0.0",
