--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.1'
+version: '3.3'
 services:
   db:
     container_name: api_db
@@ -29,26 +29,24 @@ services:
           cpus: '0.25'
           memory: $RAM_MAX_DB
   api:
-    container_name: api
     image: app_restapi_nodejs
     build: 
       dockerfile: Dockerfile
+    deploy:
+      mode: replicated
+      replicas: 5
+      endpoint_mode: vip
     privileged: true
     ports:
-      - "8000:8000"
+      - ":8000"
     networks:
       - default
     dns: 
       - "8.8.8.8"
       - "1.1.1.1"
-    volumes:
-      - ./rest:/app
-      - /app/node_modules
-    environment:
-      - NODE_ENV=development
     depends_on:
       - db
     links: 
-          - db:db
+      - db:db
 volumes:
   api_db:
