--- a/rest/.env
+++ b/rest/.env
@@ -3,10 +3,10 @@ AUTH_USERID=123
 AUTH_PASSWORD=secret
 JWT_SECRET_KEY='test@#$%$'
 
-BD_HOST=192.168.10.39
+BD_HOST=api_db
 BD_USER=root
 BD_PWD='test'
 BD_NAME=api_db
 CONNECTION_LIMIT=10
 
-MAPBOX_ACCESS_TOKEN='XXXXXXXXX'
+MAPBOX_ACCESS_TOKEN='XXXXXXX'
